--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,19 +4,48 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+     <uses-sdk android:minSdkVersion="11"
+              android:targetSdkVersion="15" />
+    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        
+        
         <activity
-            android:name=".activities.WelcomeActivity"
+            android:name="com.huge.nearby.activities.WelcomeActivity"
             android:label="@string/app_name" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity
+            android:name=".activities.NearbyActivity"
+            android:label="@string/title_activity_nearby" >
+            
+            <intent-filter >
+                <action android:name="com.huge.nearby.activities.NearbyActivity" />
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            
+            
+		<!-- Add this filter -->
+		<intent-filter>
+ 			<action android:name="android.intent.action.VIEW" />
+ 			<category android:name="android.intent.category.DEFAULT" />
+ 			<category android:name="android.intent.category.BROWSABLE" />
+ 			<data android:scheme="nearby" />
+ 		</intent-filter>
+ 		
         </activity>
     </application>
 
