--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,49 +4,46 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-     <uses-sdk android:minSdkVersion="11"
-              android:targetSdkVersion="15" />
-    
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="15" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
-        
-        
         <activity
             android:name="com.huge.nearby.activities.WelcomeActivity"
             android:label="@string/app_name" >
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="nearby" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.huge.nearby.activities.NearbyActivity"
+            android:label="@string/title_activity_nearby" >
+            <intent-filter>
+                <action android:name="com.huge.nearby.activities.NearbyActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         
-        <activity
-            android:name=".activities.NearbyActivity"
-            android:label="@string/title_activity_nearby" >
-            
-            <intent-filter >
-                <action android:name="com.huge.nearby.activities.NearbyActivity" />
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-            
-            
-		<!-- Add this filter -->
-		<intent-filter>
- 			<action android:name="android.intent.action.VIEW" />
- 			<category android:name="android.intent.category.DEFAULT" />
- 			<category android:name="android.intent.category.BROWSABLE" />
- 			<data android:scheme="nearby" />
- 		</intent-filter>
- 		
-        </activity>
     </application>
 
 </manifest>
